--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/material-top-tabs": "^6.6.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
@@ -31,6 +32,7 @@
     "react-native-config": "^1.5.1",
     "react-native-dotenv": "^3.4.10",
     "react-native-image-picker": "^7.1.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -39,8 +41,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-pager-view": "6.2.3"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
