--- a/Client/app.json
+++ b/Client/app.json
@@ -26,10 +26,12 @@
           "READ_EXTERNAL_STORAGE",
           "WRITE_EXTERNAL_STORAGE"
         ]
-      }
+      },
+      "package": "com.marammarzouki.RecipeApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     }
+
   }
 }
