--- a/Client/package.json
+++ b/Client/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "@react-navigation/material-top-tabs": "^6.6.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@types/react": "~18.2.45",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
     "dotenv": "^16.4.2",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-config": "^1.5.1",
+    "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.10",
     "react-native-image-picker": "^7.1.0",
     "react-native-pager-view": "6.2.3",
@@ -41,7 +43,9 @@
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "typescript": "^5.3.0",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
