--- a/Client/package.json
+++ b/Client/package.json
@@ -9,43 +9,64 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@config-plugins/react-native-webrtc": "^9.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.1",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/material-top-tabs": "^6.6.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@stream-io/react-native-webrtc": "^118.0.1",
+    "@stream-io/video-react-native-sdk": "^0.7.7",
     "@types/react": "~18.2.45",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
     "dotenv": "^16.4.2",
-    "expo": "~50.0.6",
-    "expo-image-picker": "~14.7.1",
+    "expo": "^51.0.8",
+    "expo-build-properties": "^0.12.1",
+    "expo-clipboard": "~6.0.3",
+    "expo-dev-client": "~4.0.14",
+    "expo-file-system": "~17.0.1",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.5",
+    "expo-media-library": "~16.0.3",
+    "expo-router": "^3.5.14",
+    "expo-secure-store": "~13.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.74.1",
     "react-native-config": "^1.5.1",
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.10",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.0",
+    "react-native-incall-manager": "^4.2.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
-    "typescript": "^5.3.0",
-    "expo-dev-client": "~3.3.11"
+    "stream-chat-expo": "^5.30.0",
+    "stream-chat-react-native": "^5.30.0",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
