--- a/Server/package.json
+++ b/Server/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "js-levenshtein": "^1.1.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.9"
+    "nodemailer": "^6.9.9",
+    "stream-chat": "^8.33.0"
   }
 }
