--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/material-top-tabs": "^6.6.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@stream-io/flat-list-mvcp": "^0.10.3",
     "@stream-io/react-native-webrtc": "^118.0.1",
     "@stream-io/video-react-native-sdk": "^0.7.7",
     "@types/react": "~18.2.45",
@@ -60,7 +61,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
