--- a/Client/package.json
+++ b/Client/package.json
@@ -39,11 +39,11 @@
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.5",
     "expo-media-library": "~16.0.3",
-    "expo-router": "^3.5.14",
+    "expo-router": "~3.5.14",
     "expo-secure-store": "~13.0.1",
     "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.4",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -60,14 +60,16 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "stream-chat-expo": "^5.30.0",
     "stream-chat-react-native": "^5.30.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
