--- a/Client/eas.json
+++ b/Client/eas.json
@@ -14,7 +14,7 @@
     "production": {
       "env": {
         "EXPO_PUBLIC_IP_ADDRESS": "192.168.1.16",
-        "EXPO_PUBLIC_STREAM_ACCESS_KEY": "ya7d29hmmd9m"
+        "EXPO_PUBLIC_STREAM_ACCESS_KEY": "3jc6qrrqu9ae"
       }
     }
   },
